finish enrolment card

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1093,7 +1093,7 @@ label,
   line-height: 1.4rem;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  /* display: flex; */
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
